--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,10 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'enquiry_list' %}">Enquiries</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'office_workers_profiles' %}">Workers
                             Profiles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'office_dashboard' %}"><i
+                                class="bi bi-briefcase me-1"></i>Office</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'loan_dashboard' %}"><i
+                                class="bi bi-bank me-1"></i>Loan</a></li>
 
                     {% elif user.groups.all.0.name == 'Office_Staff' %}
                     {# OFFICE STAFF NAVIGATION #}
