--- a/templates/solar/fe_dashboard.html
+++ b/templates/solar/fe_dashboard.html
@@ -35,8 +35,7 @@
                             </td>
                             <td class="text-muted small" data-label="Applied On">
                                 <div>{{ item.created_at|date:"M d, Y" }}</div>
-                                <div class="text-secondary" style="font-size: 0.85em;">{{ item.created_at|date:"H:i:s"
-                                    }}</div>
+                                <div class="text-secondary" style="font-size: 0.85em;">{{ item.created_at|date:"H:i:s"}}</div>
                             </td>
                             <td class="text-center" data-label="Action">
                                 <a href="{% url 'site_detail' item.id %}" class="btn btn-sm btn-outline-primary">
