--- a/templates/solar/admin_dashboard.html
+++ b/templates/solar/admin_dashboard.html
@@ -256,10 +256,15 @@
                                 title="View Details">
                                 <i class="bi bi-eye"></i> View
                             </a>
-                            <a href="{% url 'update_survey' item.pk %}" class="btn btn-sm btn-outline-primary"
+                            <a href="{% url 'update_survey' item.pk %}..." class="btn btn-sm btn-outline-primary me-1"
                                 title="Edit Data">
                                 <i class="bi bi-pencil"></i> Edit
                             </a>
+                            <button class="btn btn-sm btn-outline-danger delete-app-btn" data-survey-id="{{ item.id }}"
+                                data-customer-name="{{ item.customer_name }}" data-sc-no="{{ item.sc_no }}"
+                                title="Delete Application">
+                                <i class="bi bi-trash"></i>
+                            </button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -313,6 +318,10 @@
                         <a href="{% url 'update_survey' item.pk %}" class="btn btn-outline-primary btn-sm flex-grow-1">
                             <i class="bi bi-pencil me-1"></i>Edit
                         </a>
+                        <button class="btn btn-outline-danger btn-sm delete-app-btn" data-survey-id="{{ item.id }}"
+                            data-customer-name="{{ item.customer_name }}" data-sc-no="{{ item.sc_no }}">
+                            <i class="bi bi-trash"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -374,9 +383,15 @@
                                 <i class="bi bi-eye"></i> View
                             </a>
                             <a href="{% url 'update_installation' item.survey.pk %}"
-                                class="btn btn-sm btn-outline-warning text-dark" title="Edit Data">
+                                class="btn btn-sm btn-outline-warning text-dark me-1" title="Edit Data">
                                 <i class="bi bi-pencil"></i> Edit
                             </a>
+                            <button class="btn btn-sm btn-outline-danger delete-app-btn"
+                                data-survey-id="{{ item.survey.id }}"
+                                data-customer-name="{{ item.survey.customer_name }}"
+                                data-sc-no="{{ item.survey.sc_no }}" title="Delete Application">
+                                <i class="bi bi-trash"></i>
+                            </button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -439,6 +454,11 @@
                             class="btn btn-outline-warning text-dark btn-sm flex-grow-1">
                             <i class="bi bi-pencil me-1"></i>Edit
                         </a>
+                        <button class="btn btn-outline-danger btn-sm delete-app-btn"
+                            data-survey-id="{{ item.survey.id }}" data-customer-name="{{ item.survey.customer_name }}"
+                            data-sc-no="{{ item.survey.sc_no }}">
+                            <i class="bi bi-trash"></i>
+                        </button>
                     </div>
                 </div>
             </div>
